--- a/backend/package.json
+++ b/backend/package.json
@@ -1,125 +1,125 @@
 {
-  "name": "backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --findRelatedTests \"src/**/*.spec.ts\" \"test/**/*.spec.ts\" \"lib/**/*.spec.ts\"",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "typeorm:create": "pnpm exec typeorm-ts-node-commonjs migration:create",
-    "typeorm:generate": "pnpm exec typeorm-ts-node-commonjs migration:generate -d ./src/database/data-source.ts ./src/database/migrations/init",
-    "typeorm:run": "pnpm exec typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts",
-    "typeorm:revert": "pnpm exec typeorm-ts-node-commonjs migration:revert -d src/database/data-source.ts",
-    "typeorm:seed:dev": "pnpm run build && pnpm exec typeorm-extension seed:run -d src/database/data-source.ts",
-    "typeorm:seed": "pnpm exec typeorm-extension seed:run -d src/database/data-source.ts",
-    "compose:up": "docker compose up -d"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.654.0",
-    "@aws-sdk/s3-request-presigner": "^3.654.0",
-    "@nestjs-modules/mailer": "^2.0.2",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/cqrs": "^10.2.7",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.2",
-    "@nestjs/serve-static": "^4.0.2",
-    "@nestjs/swagger": "^7.4.0",
-    "@nestjs/throttler": "^6.2.1",
-    "@nestjs/typeorm": "^10.0.0",
-    "bcrypt": "^5.1.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "dot": "^1.1.3",
-    "exceljs": "^4.4.0",
-    "express": "^4.19.2",
-    "helmet": "^7.1.0",
-    "multer": "1.4.5-lts.1",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "pdfkit": "^0.15.0",
-    "pg": "^8.12.0",
-    "puppeteer": "^23.2.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20",
-    "typeorm-extension": "^3.6.1",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/dot": "^1.1.7",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.12",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^20.11.16",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
-    "@types/pdfkit": "^0.13.4",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "dotenv": "^16.4.5",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-mdx": "^3.1.5",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.0.0",
-    "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-packagejson": "^2.5.1",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.2",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": ".",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "./coverage",
-    "testEnvironment": "node",
-    "roots": [
-      "<rootDir>/src/",
-      "<rootDir>/libs/"
-    ],
-    "moduleNameMapper": {
-      "^@app/auth(|/.*)$": "<rootDir>/libs/auth/src/$1",
-      "^@app/attachment(|/.*)$": "<rootDir>/libs/attachment/src/$1",
-      "^@app/file-creation(|/.*)$": "<rootDir>/libs/file-creation/src/$1",
-      "^@app/mail(|/.*)$": "<rootDir>/libs/mail/src/$1"
-    }
-  }
+	"name": "backend",
+	"version": "0.0.1",
+	"private": true,
+	"description": "",
+	"license": "UNLICENSED",
+	"author": "",
+	"scripts": {
+		"build": "nest build",
+		"compose:up": "docker compose up -d",
+		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
+		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+		"start": "nest start",
+		"start:debug": "nest start --debug --watch",
+		"start:dev": "nest start --watch",
+		"start:prod": "node dist/main",
+		"test": "jest --findRelatedTests \"src/**/*.spec.ts\" \"test/**/*.spec.ts\" \"lib/**/*.spec.ts\"",
+		"test:cov": "jest --coverage",
+		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+		"test:e2e": "jest --config ./test/jest-e2e.json",
+		"test:watch": "jest --watch",
+		"typeorm": "ts-node ./node_modules/typeorm/cli",
+		"typeorm:create": "pnpm exec typeorm-ts-node-commonjs migration:create",
+		"typeorm:generate": "pnpm exec typeorm-ts-node-commonjs migration:generate -d ./src/database/data-source.ts ./src/database/migrations/init",
+		"typeorm:revert": "pnpm exec typeorm-ts-node-commonjs migration:revert -d src/database/data-source.ts",
+		"typeorm:run": "pnpm exec typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts",
+		"typeorm:seed": "pnpm exec typeorm-extension seed:run -d src/database/data-source.ts",
+		"typeorm:seed:dev": "pnpm run build && pnpm exec typeorm-extension seed:run -d src/database/data-source.ts"
+	},
+	"jest": {
+		"collectCoverageFrom": [
+			"**/*.(t|j)s"
+		],
+		"coverageDirectory": "./coverage",
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"moduleNameMapper": {
+			"^@app/auth(|/.*)$": "<rootDir>/libs/auth/src/$1",
+			"^@app/attachment(|/.*)$": "<rootDir>/libs/attachment/src/$1",
+			"^@app/file-creation(|/.*)$": "<rootDir>/libs/file-creation/src/$1",
+			"^@app/mail(|/.*)$": "<rootDir>/libs/mail/src/$1"
+		},
+		"rootDir": ".",
+		"roots": [
+			"<rootDir>/src/",
+			"<rootDir>/libs/"
+		],
+		"testEnvironment": "node",
+		"testRegex": ".*\\.spec\\.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "ts-jest"
+		}
+	},
+	"dependencies": {
+		"@aws-sdk/client-s3": "^3.654.0",
+		"@aws-sdk/s3-request-presigner": "^3.654.0",
+		"@nestjs-modules/mailer": "^2.0.2",
+		"@nestjs/common": "^10.0.0",
+		"@nestjs/config": "^3.2.3",
+		"@nestjs/core": "^10.0.0",
+		"@nestjs/cqrs": "^10.2.7",
+		"@nestjs/jwt": "^10.2.0",
+		"@nestjs/passport": "^10.0.3",
+		"@nestjs/platform-express": "^10.4.2",
+		"@nestjs/serve-static": "^4.0.2",
+		"@nestjs/swagger": "^7.4.0",
+		"@nestjs/throttler": "^6.2.1",
+		"@nestjs/typeorm": "^10.0.0",
+		"bcrypt": "^5.1.1",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.1",
+		"dot": "^1.1.3",
+		"exceljs": "^4.4.0",
+		"express": "^4.19.2",
+		"helmet": "^7.1.0",
+		"multer": "1.4.5-lts.1",
+		"passport-jwt": "^4.0.1",
+		"passport-local": "^1.0.0",
+		"pdfkit": "^0.15.0",
+		"pg": "^8.12.0",
+		"puppeteer": "^23.2.0",
+		"reflect-metadata": "^0.1.13",
+		"rxjs": "^7.8.1",
+		"typeorm": "^0.3.20",
+		"typeorm-extension": "^3.6.1",
+		"zod": "^3.24.1"
+	},
+	"devDependencies": {
+		"@nestjs/cli": "^10.0.0",
+		"@nestjs/schematics": "^10.0.0",
+		"@nestjs/testing": "^10.0.0",
+		"@types/bcrypt": "^5.0.2",
+		"@types/dot": "^1.1.7",
+		"@types/express": "^4.17.17",
+		"@types/jest": "^29.5.12",
+		"@types/multer": "^1.4.12",
+		"@types/node": "^20.11.16",
+		"@types/passport-jwt": "^4.0.1",
+		"@types/passport-local": "^1.0.38",
+		"@types/pdfkit": "^0.13.4",
+		"@types/supertest": "^6.0.0",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"dotenv": "^16.4.5",
+		"eslint": "^8.42.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-mdx": "^3.1.5",
+		"eslint-plugin-prettier": "^5.0.0",
+		"jest": "^29.7.0",
+		"lint-staged": "^15.2.7",
+		"prettier": "^3.0.0",
+		"prettier-plugin-organize-imports": "^4.0.0",
+		"prettier-plugin-packagejson": "^2.5.1",
+		"source-map-support": "^0.5.21",
+		"supertest": "^6.3.3",
+		"ts-jest": "^29.1.2",
+		"ts-loader": "^9.4.3",
+		"ts-node": "^10.9.1",
+		"tsconfig-paths": "^4.2.0",
+		"typescript": "^5.1.3"
+	}
 }
